fix: update scrollbar colors for consistency; adjust radio button styles for improved accessibility

--- a/static/iframe-styles.css
+++ b/static/iframe-styles.css
@@ -5,10 +5,10 @@ body{
 }
 body::-webkit-scrollbar{
     display: inline;
-    background-color: #0056b3;
+    background-color: rgb(150, 170, 202);
     border-radius: 5px;
 }
 body::-webkit-scrollbar-thumb{
-    background-color: #0056b3;
+    background-color: rgb(93, 143, 209);
     border-radius: 5px;
 }
